# exi-demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_thread.md  bctl  conanfile.py  exi_demo.cpp  threading_example.cpp  uuid_hash.hpp
.github/workflows/: ci.yml
docs/options/: byte-aligned.xml  compression-fragment.xml  partner-interop.xml
docs/plans/: 2026-07-03-v2-api-migration.md
samples/: entity.xml  flight-capability-status.xml  flight-capability.xml  nav-heavy.xml  navigation-report.xml  posdet-heavy.xml  position-report.xml  task-command.xml  task.xml
